force-app/main/default/objects/EC_AccObj1__c/EC_AccObj1__c.object-meta.xml
<CustomObject>
    <description>Test111123456</description>
    <label>EC-AccObj1</label>
    <nameField>
        <label>EC-AccObj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ECAccObj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>