force-app/main/default/objects/EC_AccObj1__c/fields/Afield__c.field-meta.xml
<CustomField>
    <fullName>Afield__c</fullName>
    <label>Afield</label>
    <type>Phone</type>
</CustomField>