force-app/main/default/objects/EC_AccObj1__c/fields/EaField__c.field-meta.xml
<CustomField>
    <fullName>EaField__c</fullName>
    <label>EaField</label>
    <type>Phone</type>
</CustomField>