force-app/main/default/objects/EC_AccObj1__c/fields/ECOBjField1__c.field-meta.xml
<CustomField>
    <fullName>ECOBjField1__c</fullName>
    <description>test6789</description>
    <label>ECOBjField1</label>
    <length>40</length>
    <type>Text</type>
</CustomField>