force-app/main/default/objects/EC_AccObj1__c/fields/Pl3__c.field-meta.xml
<CustomField>
    <fullName>Pl3__c</fullName>
    <description>Test new678111</description>
    <label>Pl3</label>
    <type>Email</type>
</CustomField>