force-app/main/default/objects/EC_AccObj1__c/recordTypes/ECrecordTypeTest3.recordType-meta.xml
<RecordType>
    <fullName>ECrecordTypeTest3</fullName>
    <active>true</active>
    <label>ECrecordTypeTest3</label>
</RecordType>