force-app/main/default/objects/EC_AccObj1__c/recordTypes/Test1.recordType-meta.xml
<RecordType>
    <fullName>Test1</fullName>
    <active>true</active>
    <label>Test1</label>
</RecordType>