force-app/main/default/objects/EC_AccObj1__c/validationRules/ECVRule1.validationRule-meta.xml
<ValidationRule>
    <fullName>ECVRule1</fullName>
    <active>false</active>
    <description>Test122345611111111111</description>
    <errorConditionFormula>ISBLANK(  ECOBjField1__c )</errorConditionFormula>
    <errorMessage>Please enter a value</errorMessage>
</ValidationRule>